# swervebot_sim

./: README.md
swervebot_sim/: CMakeLists.txt  package.xml
swervebot_sim/launch/: gazebo.launch.py
swervebot_sim/model/swerve4bot/config/: swervebot_controller.yaml
swervebot_sim/model/swerve4bot/xacro/: swervebot.xacro
swervebot_sim/src/: swervebot_driver.cpp
